--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -249,10 +249,11 @@
 .q-tab-panels {
   background: transparent;
 }
-
+/*
 .q-tab-panel {
   padding: 16px 0;
 }
+*/
 /* Country select styles */
 .country-select {
   min-width: 120px;
